--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">McMaster Map</string>
+
+    <string-array
+        name="UniBuildings">
+        <item>text_string</item>
+    </string-array>
+
+
 </resources>
