--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">McMaster Map</string>
+    <string name="search_text">Search:</string>
 
     <string-array
         name="UniBuildings">
